# speech-server

./: .gitignore  README.md  announcements.md  info  piper_multi_server.py  pyproject.toml  requirements.txt
examples/: ai.py  codec.js  debug_mixer_stt.py  debug_stt_pipeline.py  sts.html  webconference.py
speech_pipeline/: AudioMixer.py  AudioReader.py  AudioTee.py  CodecSocketSession.py  CodecSocketSink.py  ConferenceEndpoint.py  ConferenceLeg.py  ConferenceMixer.py  HangupSink.py  MixMinus.py  PipelineBuilder.py  QueueSink.py  RTPSession.py  SIPSession.py  SIPSink.py  SIPSource.py  VCConverter.py  WebhookSink.py  WhisperSTT.py  base.py  cli.py  dsl_parser.py  dtls_srtp.py  media_refs.py  metrics_api.py  pipeline_api.py  rtp_codec.py  url_safety.py
tests/: conftest.py  fake_crm.py  test_api_accounts.py  test_api_auth.py  test_api_calls.py  test_api_commands.py  test_api_dsl_rejections.py  test_api_isolation.py  test_api_latency.py  test_api_legs.py  test_api_nonces.py  test_api_pbx.py  test_api_pipes.py  test_api_race_idempotency.py  test_api_scope_matrix.py  test_api_stages.py  test_api_subscribers.py  test_api_webclient_lifecycle.py  test_audio_chain.py  test_audit_fixes.py  test_call_lifecycle.py  test_codec_audio_roundtrip.py  test_codecs.py  test_completion_monitor.py  test_conference_e2e.py  test_crm_contract.py  test_crm_contract_extras.py  test_crm_delete_contract.py  test_crm_device_dial_hangup_e2e.py  test_crm_e2e.py  test_crm_event_coverage.py  test_crm_full_flows.py  test_crm_hold_and_multiparty.py  test_crm_hold_webhooks.py  test_crm_integration.py  (+47 more)
(+16 files in other folders)
